--- a/public/stylesheets/variables.css
+++ b/public/stylesheets/variables.css
@@ -7,13 +7,30 @@
     /* FUENTES */
     --font-berkshire : 'Berkshire Swash', cursive;
     --font-roboto : 'Roboto', sans-serif;
+    
     /* Tamaños */
-    --paragraph : 12px;
-    --title : 24px;
-    --prices : 18px;
-    --discounts-descriptions : 16px;
+    --paragraph : 1.2rem;
+    --icon : 2rem;
+    --title: 2.1rem;
+    --btn : 1.3rem;
+    --discounts-descriptions : 1.4rem;
 
-    /* Sombreado */
-    --box-shadow-images: 4px 4px 4px rgba(0, 0, 0, 0.5);
-    --box-shadow-button: 2px 2px 2px rgba(0, 0, 0, 0.5);
+
+     /* SombreadoS */
+     --box-shadow-images: 4px 4px 4px rgba(0, 0, 0, 0.5);
+     --box-shadow-button: 2px 2px 2px rgba(0, 0, 0, 0.5);
 }
+
+/* REGLAS GENERALES */
+body {
+    font-family: var(--font-roboto);
+    font-size: 62.5%;
+  }
+  li {
+    list-style-type: none;
+  }
+  a {
+    text-decoration: none;
+    color: var(--color-azulOscuro);
+    
+  }
