--- a/views/shoppingCart.html
+++ b/views/shoppingCart.html
@@ -4,16 +4,135 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- LINK DE FONT AWESONE  -->
+    <script src="https://kit.fontawesome.com/fc00004fb4.js"crossorigin="anonymous"></script>
+   
     <script src="https://kit.fontawesome.com/29f0a39c3c.js" crossorigin="anonymous"></script>
+    
+    <!-- LINK DE GOOGLE FONT BERKSHIRE Y ROBOTO -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
+   
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+   
     <link href="https://fonts.googleapis.com/css2?family=Berkshire+Swash&family=Roboto&display=swap" rel="stylesheet">
+    
+    <!-- LINK CSS DEL HEADER -->
+    <link rel="stylesheet" href="stylesheets/header.css">
+
+    <!-- LINK DEL CARRITO -->
     <link rel="stylesheet" href="stylesheets/shoppingCart.css">
+
+    <!-- TITULO DEL SITIO -->
     <title>SpellBook</title>
+
 </head>
-<body>
+
+<!-- BODY CON IMAGEN DE FONDO -->
+<body class="background-image">
+
+    <!-- COMIENZA EL HEADER -->
+    <header class="header">
+
+        <!-- LOGO CON LINK AL HOME -->
+        <div class="logo">
+          <h1 class="logo__title"><a href="" class="logo__link">SpellBook</a></h1>
+        </div>
+
+        <!-- BURGER MENU -->
+        <div class="btn">
+          <i class="fas fa-bars" id="icon"></i>
+        </div>
+
+        <!-- MENU DESPLEGABLE -->
+        <nav class="nav">
+          <ul class="menu">
+            <li class="menu__items">
+                <a href="#" class="menu__link">Inicio</a>
+            </li>
+            <li class="menu__items">
+                <a href="#" class="menu__link">Libros</a>
+            </li>
+            <li class="menu__items">
+              <a href="#" class="menu__link">Recomendados</a>
+            </li>
+            <li class="menu__items">
+              <a href="#" class="menu__link">Novedades</a>
+            </li>
+            <li class="menu__items">
+              <a href="#" class="menu__link">Nosotros</a>
+            </li>
+          </ul>
+
+          <!-- REGISTRO E INICIO DE SESIÓN -->
+          <div class="login">
+            <a class="login__btn">Registrate</a>
+            <a class="login__btn login--up">Iniciar sesion</a>
+          </div>
+        </nav>
+
+        <!-- HEADER VERSIÓN DESKTOP -->
+        
+        <!-- SE UTILIZA EL MISMO LOGO ORIENTADO EN EL CENTRO -->
+        
+            <!-- LUPA, CARRITO Y MAGO DE USUARIO -->
+        <div class="user__desk">
+
+            <!-- LUPA DE BUSQUEDA -->
+            <label name="search" id="search" >
+                <input class="user__search__desk" type="search" name="search" id="search" placeholder="¿Que buscas Muggle?">
+                <i class="fas fa-search user__icon__desk"></i>
+            </label>
+
+            <!-- HACIA EL CARRITO DE COMPRAS -->
+            <a href="/cart">
+                <i class="fas fa-shopping-cart user__icon__desk"></i>
+            </a>
+            <!-- MAGO PARA REGISTRARSE -->
+            <div class="wizard">    
+                 <a href="/login" class="wizard__image">
+                     <img src="images/wizard-icon.png" width="20px" alt="">
+                 </a>
+                 <a href="/login" class="wizard__login">
+                    <p>Ingresar / </p>
+                 </a>
+                 <a href="/signup" class="wizard__login">
+                     <p>Registrarse</p>
+                 </a>
+            </div>
+        </div>
+
+        <!-- MENU POR DEBAJO DEL HEADER -->
+        <nav class="nav__desk">
+            <ul class="menu__desk">
+              <li class="menu__items__desk">
+                  <a href="/" class="menu__link__desk">Inicio</a>
+              </li>
+              <li class="menu__items__desk">
+                  <a href="/product" class="menu__link__desk">Libros</a>
+              </li>
+              <li class="menu__items__desk">
+                <a href="#" class="menu__link__desk">Recomendados</a>
+              </li>
+              <li class="menu__items__desk">
+                <a href="#" class="menu__link__desk__desk">Novedades</a>
+              </li>
+              <li class="menu__items__desk">
+                <a href="#" class="menu__link__desk">Nosotros</a>
+              </li>
+            </ul>
+        </nav>
+      </header>
+
+    <!-- COMIENZA EL CARRITO -->
+
+    <div class="global">
+
+        <!-- TITULO DE PAGINA -->
     <h1 class="title">Mi Carrito</h1>
+
+<!-- SECCIÓN DE PRODUCTO Y CANTIDAD -->    
     <section>
+        <!-- TODOS LOS PRODUCTOS A COMPRAR -->
         <article class="conteiner-item">   
             <div class="item-left">
                 <img class="buy-image" src="images/harry-potter-y-el-caliz-de-fuego.jpg" alt="">
@@ -22,38 +141,50 @@
             <div class="item-right">   
                 <i class="far fa-trash-alt right"></i>
                 <p>$ 1200</p>
+
+                <!-- BOTON DE CANTIDAD DE UNIDADES -->
                 <form action="/carrito" method="GET">
-            <label>Cantidad: </label>
-            <select  class="quantity-button" name="cantidad">
-                <option value="1">1</option>
-                <option value="2">2</option>
-                <option value="3">3</option>
-                <option value="4">4</option>
-                <option value="5">5</option>
-            </select>
+                    <label>Cantidad: </label>
+                    <select  class="quantity-button" name="cantidad">
+                        <option value="1">1</option>
+                        <option value="2">2</option>
+                        <option value="3">3</option>
+                        <option value="4">4</option>
+                        <option value="5">5</option>
+                    </select>
                 </form>
             </div>
         </article>
     </section>
-    <section>
+
+    <!-- DETALLE DE COMPRA -->
+    <section class="detail-buy">
+        <!-- TÍTULO DE SECCIÓN -->
         <h3 class="detail-title">Detalle de la Compra</h3>
+
+        <!-- SECCIÓN DETALLE DE COMPRA -->
         <div class="conteiner-price">
             <p>Harry Potter y el caliz de fuego</p>
-            <p>$$$$</p>
+            <p>1200</p>
         </div>
         <div class="conteiner-price">
             <p>SubTotal </p>
-            <p>$$$$</p>
+            <p>1200</p>
         </div>
         <div class="conteiner-price total">
             <p>Total</p>
-            <p>$$$$</p>
+            <p>1200</p>
         </div>
         <a href="#" >
             <button class="to-pay" type="submit">Ir al Pago</button>
         </a>
     </section>
+
+    <!-- TÍTULO RECOMENDADOS -->
     <h3 class="recommended-title">Recomendados para Vos</h3>
+
+
+    <!-- SECCIÓN RECOMENDADOS -->
     <section class="recommended-conteiner">
        
         <article class="recommended-item">
@@ -81,5 +212,10 @@
             </a>
         </article>
     </section>
+</div>
+
+<!-- LINK DEL JS DEL HEADER -->
+<script src="js/header.js"></script>
+
 </body>
 </html>
