--- a/public/stylesheets/register.css
+++ b/public/stylesheets/register.css
@@ -32,8 +32,8 @@ a{
 
 .user-image-item {
     border-radius: 50%;
-    width: 30%;
-    max-height: 100px;
+    width: 40%;
+    max-height: 300px;
 }
 
 /* BARITA */
@@ -44,8 +44,27 @@ a{
 .user-magic-wand i {
     font-size:  0.9rem;
 }
-
+/*  CONTENEDOR DE USER Y EMAIL */
+.conteiner-info-user{
+    border: solid 1px grey;
+    border-radius: 15px;
+    background-color: var(--color-beige);
+    width: 75%;
+   margin: 0 auto;
+   box-shadow: var(--box-shadow-images);
+   margin-top: 2rem;
+}
 /* NOMBRE DEL USUARIO */
+.info-user{
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    margin: 1rem auto;
+    width: 100%;
+    font-size: 0.9rem;
+    font-family: var(--font-berkshire);
+}
+
 .user-name{
     color: var(--color-azulOscuro);
     position: relative;
@@ -55,10 +74,24 @@ a{
     font-size: 12px;
     font-family: var(--font-berkshire);
 }
+/* TÍTULO DE SECCIÓN */
+.title-seccion {
+    font-family: var(--font-berkshire);
+    margin: 2rem ;
 
+}
 
 /* CAMPOS A LLENAR */
 
+.conteiner-user-data {
+    border: solid 1px grey;
+    border-radius: 15px;
+    background-color: var(--color-beige);
+    width: 90%;
+    margin: 0 auto;
+    box-shadow: var(--box-shadow-images);
+    margin-top: 1rem;
+}
 /* PARA TODOS LOS IMPUTS */
 .user-data {
     display: flex;
@@ -83,17 +116,14 @@ a{
     border-bottom: solid 3px var(--color-azulOscuro);
     width: 70%;
 }
-.user-date-inputs::placeholder {
-    font-size: 12px ;
-    font-family:  var(--color-azulOscuro);
-    position: relative;
-    top: 3px;
+::placeholder {
+    color: gray;
+    font-size: 12px;
     opacity: 0.6;
-    background-color: var(--color-beige);
-    border-radius: 30px;
 }
 
 .confirmation {
+    height: 30px;
     justify-content: flex-end;
     display: flex;
     width: 74%;
@@ -150,4 +180,12 @@ a{
     box-shadow: var(--box-shadow-button);
     display: block;
     margin: 2rem auto;
+ }
+
+ /* NO HAZ REALIZADO COMPRA */
+ .not-buy {
+     font-size: var(--paragraph);
+     margin: 25px auto;
+     text-align: center;
+
  }
