--- a/views/register.html
+++ b/views/register.html
@@ -136,61 +136,62 @@
               <img  class= "user-image-item"src="images/user-img.png"  alt="">
           </div>
           <div class="user-magic-wand">
-              <i class="fas fa-magic"></i>
+              <img src="/images/varita.png" width="15%" alt="">
           </div>
       </section>
 
      <!-- NOMBRE DEL USUARIO -->
-      <h5 class="user-name">Nombre del Usuario</h5>
+     <!--  <h5 class="user-name">Nombre del Usuario</h5> -->
         
       <!-- CAMPOS A LLENAR -->
-
+      <div class="conteiner-info-user">
       <!-- NOMBRE -->
+      <div class="info-user">
+        <img class="user-data-icon user-pocision" height="40px" src="images/wizard-icon.png" alt="img de mago">
+        <p>Nombre del Usuario</p>
+      </div>
+
+      <!-- EMAIL -->
+      <div class="info-user">
+        <i class="fas fa-envelope user-data-icon"></i>
+        <p>example@exam.com</p>
+      </div>
+    </div>
+
+ 
+      <!-- TÍTULO DE SECCIÓN -->
+      <h2 class="title-seccion">Datos Personales</h2>
+      
+      
+      <!-- CAMPOS A LLENAR -->
+      <section class="conteiner-user-data">
+        <!-- NOMBRE -->
         <p class="user-data">
-        <label for="name">
-            <img class="user-data-icon user-pocision" height="40px" src="images/wizard-icon.png" alt="img de mago">
-        </label>
-        <input class = "user-date-inputs" placeholder="Nombre Completo" type="text" name="name" id="name">
-        </p>
+          <label for="name">
+              <img class="user-data-icon user-pocision" height="40px" src="images/wizard-icon.png" alt="img de mago">
+          </label>
+          <input class = "user-date-inputs" placeholder="Nombre" type="text" name="name" id="name">
+          </p>
+          <!-- APELLIDO -->
+          <p class="confirmation">
+            <input class = "user-date-inputs " placeholder="Apellido" type="text" name="firstName" id="firstName">
+          </p>
 
-      <!-- NACIMIENTO -->
-        <p class="user-data ">
-        <label for="date">
-            <i class="far fa-calendar user-data-icon "><img class="image-icon" height="18px" src="images/wizard-icon.png" alt="img de mago"></i>
-        </label>
-        <input class ="user-date-inputs-date date-pocision" type="date" name="date" id="date">
-        </p>
 
-      <!-- LUGAR -->
+         <!-- LUGAR -->
         <p class="user-data">    
         <label for="location">
             <i class="fas fa-globe-americas user-data-icon"></i>
         </label>
-        <input class = "user-date-inputs" placeholder="¿De donde Eres?" type="text" name="location" id="location">
+        <input class = "user-date-inputs" placeholder="País de Residencia" type="text" name="location" id="location">
         </p>
-
-        <!-- CONTRASEÑA -->
-        <p class="user-data">    
-        <label for="password">
-            <i class="fas fa-lock user-data-icon pass-pocision"></i>
-        </label>
-        <input class = "user-date-inputs" placeholder="Contraseña" type="password" name="pass" id="password">
-        </p>
+        <!-- PROVINCIA -->
         <p class="confirmation">
-          <input class = "user-date-inputs " placeholder="Confirmar Contraseña" type="password" name="pass" id="password">
+          <input class = "user-date-inputs " placeholder="Provincia o Estado" type="text" name="firstName" id="firstName">
         </p>
 
-        <!-- EMAIL -->
-        <p class="user-data">
-        <label for="email">
-            <i class="fas fa-envelope user-data-icon"></i>
-        </label>
-        <input class = "user-date-inputs" placeholder="E-mail" type="email" name="email" id="email">
-        </p>
-        <p class="confirmation">
-          <input class = "user-date-inputs" placeholder="Confirmar E-mail" type="email" name="email" id="email">
-        </p>
 
+        
         <!-- TELEFONO -->
         <p class="user-data">
         <label for="phone">
@@ -199,8 +200,24 @@
         <input class = "user-date-inputs" placeholder="Numero de Contacto" type="tel" name="phone" id="phone">
         </p>
 
+
+         <!-- NACIMIENTO -->
+         <p class="user-data ">
+          <label for="date">
+              <i class="far fa-calendar user-data-icon "><img class="image-icon" height="18px" src="images/wizard-icon.png" alt="img de mago"></i>
+          </label>
+          <input class ="user-date-inputs-date date-pocision" type="date" name="date" id="date">
+          </p>
+      
         <!-- BOTON PARA REGISTRARSE -->
-        <button type="submit" class="btn-save">REGISTRARME</button>
+        <button type="submit" class="btn-save">GUARDAR</button>
+      </section>
+      <h2 class="title-seccion">Tus ultimas Compras</h2>
+      <hr>
+      <section>
+        <p class="not-buy">No haz realizado ninguna compra aún</p>
+        <p class="not-buy">Empieza ahora</p>
+      </section>
      
     </form>
   </main>
