--- a/views/login.html
+++ b/views/login.html
@@ -85,7 +85,7 @@
           />
           <span class="warning">Contraseña incorrecta</span>
         </div>
-        <button type="submit" value="Enviar" class="btn__send">Iinicar sesion</button>
+        <button type="submit" value="Enviar" class="btn__send">Iniciar sesion</button>
         <div class="user">
           <a href="" class="enlace_link">¿Olvidate tu contraseña?</a>
           <a href="/signup" class="enlace_link"  >¿No tenes cuenta?</a>
