--- a/public/stylesheets/productDetail.css
+++ b/public/stylesheets/productDetail.css
@@ -25,7 +25,7 @@ body {
 .item__img img {
   height: 320px;
   box-shadow: 4px 4px 4px rgba(0, 0, 0, 0.4);
-  border: 5px;
+  border-radius: 3px;
 }
 .descriptions {
   width: 80%;
@@ -91,6 +91,7 @@ body {
 }
 .books__img {
   width: 100%;
+  border-radius: 3px;
   box-shadow: 4px 4px 4px rgba(0, 0, 0, 0.4);
 }
 .books__title {
