--- a/public/stylesheets/footer.css
+++ b/public/stylesheets/footer.css
@@ -7,19 +7,22 @@ footer {
 .footer-main {
     color: var(--color-beige);
 font-size: 0.7rem;
-padding: 0.5rem;
+padding: 0.5rem ;
 display: flex;
 flex-direction: column;
 justify-content: center;
 opacity: 0.9;
 
+
 }
 /* TITULOS */
+
 .footer-myAccount .footer-header p{
 text-transform: uppercase;
 font-size: 0.75rem;
 margin-bottom: 0.1rem;
 text-shadow: 1px 1px 2px grey;
+margin-top: 0.8rem;
 
 }
 
@@ -28,6 +31,7 @@ text-transform: uppercase;
 font-size: 0.75rem;
 margin-bottom: 0.1rem;
 text-shadow: 1px 1px 2px grey;
+margin-top: 0.8rem;
 }
 
 .footer-onlineStore .footer-header p{
@@ -35,11 +39,13 @@ text-transform: uppercase;
 font-size: 0.75rem;
 margin-bottom: 0.1rem;
 text-shadow: 1px 1px 2px grey;
+margin-top: 0.8rem;
  }
         
 .footer-options p{
     margin: 0.2rem 0;
 }
+
 
 /* LOGO */
 .footer-logo p {
@@ -51,6 +57,7 @@ margin: 0;
 padding: 0.3rem;
 letter-spacing: 0.2rem;
 text-shadow: 1px 1px 4px grey;
+
 }
 
 /* COPYRIGHT */
