--- a/public/stylesheets/variables.css
+++ b/public/stylesheets/variables.css
@@ -7,9 +7,15 @@
     /* FUENTES */
     --font-berkshire : 'Berkshire Swash', cursive;
     --font-roboto : 'Roboto', sans-serif;
-    /* Tamaños */
-    --paragraph : 12px;
-    --title : 24px;
-    --prices : 18px;
-    --discounts-descriptions : 16px;
+     /* Tamaños */
+     --paragraph : 1.2rem;
+     --icon : 2rem;
+     --title: 2.1rem;
+     --btn : 1.3rem;
+     --discounts-descriptions : 1.4rem;
+ 
+ 
+      /* SombreadoS */
+      --box-shadow-images: 4px 4px 4px rgba(0, 0, 0, 0.5);
+      --box-shadow-button: 2px 2px 2px rgba(0, 0, 0, 0.5);
 }
