--- a/views/shoppingCart.html
+++ b/views/shoppingCart.html
@@ -19,6 +19,9 @@
     <!-- LINK CSS DEL HEADER -->
     <link rel="stylesheet" href="stylesheets/header.css">
 
+     <!-- LINK DEL FOOTER -->
+     <link rel="stylesheet" href="stylesheets/footer.css">
+
     <!-- LINK DEL CARRITO -->
     <link rel="stylesheet" href="stylesheets/shoppingCart.css">
 
@@ -79,7 +82,7 @@
 
             <!-- LUPA DE BUSQUEDA -->
             <label name="search" id="search" >
-                <input class="user__search__desk" type="search" name="search" id="search" placeholder="¿Que buscas Muggle?">
+                <input class="user__search__desk" type="search" name="search" id="search" placeholder="">
                 <i class="fas fa-search user__icon__desk"></i>
             </label>
 
@@ -213,6 +216,59 @@
         </article>
     </section>
 </div>
+
+    <!-- FOOTER -->
+  <footer>
+    <div class="footer-main">
+    <section class="footer-myAccount">
+      <div class="footer-header">
+        <p>Mi Cuenta</p>
+      </div>
+      <div class="footer-options">
+        <p>Ingresar</p>
+        <p>Ver Carrito</p>
+        <p>Finalizar Compra</p>
+      </div>
+      
+    </section>
+
+    <section class="footer-contactUs">
+      <div class="footer-header">
+        <p>Contacto</p>
+      </div>
+      <div class="footer-options">
+        <p><i class="fas fa-envelope"></i>  <a href="mailto:info@spellbook.com">mailto:info@spellbook.com</a></p>
+        <p><i class="fas fa-phone"></i>  0810 222 9686</p>
+        <p><i class="fab fa-facebook"></i> <i class="fab fa-instagram"></i> <i class="fab fa-twitter"></i></p>
+      </div>
+    </section>
+
+    <section class="footer-onlineStore">
+      <div class="footer-header">
+        <p>Online Store</p>
+      </div>
+      <div class="footer-options">
+        <p>Medios de pago</p>
+        <p>Envíos</p>
+        <p>Términos y Condiciones</p>
+      </div>
+      
+    </section>
+  </div>
+
+    <section class="footer-logo">
+     <p>SpellBook</p>
+
+    </section>
+  
+    
+    <div class="footer-copyright">
+      <hr>
+      <p>SPELLBOOK © 2021 MARCA REGISTRADA - TODOS LOS DERECHOS RESERVADOS - </p>
+    </div>
+    
+  </footer>
+
 
 <!-- LINK DEL JS DEL HEADER -->
 <script src="js/header.js"></script>
