--- a/views/register.html
+++ b/views/register.html
@@ -19,6 +19,9 @@
       <!-- LINK CSS DEL HEADER -->
       <link rel="stylesheet" href="stylesheets/header.css">
 
+      <!-- LINK DEL FOOTER -->
+      <link rel="stylesheet" href="stylesheets/footer.css">
+
       <!-- LINK DEL REGISTRO -->
       <link rel="stylesheet" href="stylesheets/register.css">
 
@@ -79,7 +82,7 @@
 
             <!-- LUPA DE BUSQUEDA -->
             <label name="search" id="search" >
-                <input class="user__search__desk" type="search" name="search" id="search" placeholder="¿Que buscas Muggle?">
+                <input class="user__search__desk" type="search" name="search" id="search" placeholder="">
                 <i class="fas fa-search user__icon__desk"></i>
             </label>
 
@@ -145,18 +148,18 @@
         
       <!-- CAMPOS A LLENAR -->
       <div class="conteiner-info-user">
-      <!-- NOMBRE -->
-      <div class="info-user">
-        <img class="user-data-icon user-pocision" height="40px" src="images/wizard-icon.png" alt="img de mago">
-        <p>Nombre del Usuario</p>
-      </div>
+        <!-- NOMBRE -->
+        <div class="info-user">
+          <img class="user-data-icon user-pocision" height="40px" src="images/wizard-icon.png" alt="img de mago">
+          <p>Nombre del Usuario</p>
+        </div>
 
-      <!-- EMAIL -->
-      <div class="info-user">
-        <i class="fas fa-envelope user-data-icon"></i>
-        <p>example@exam.com</p>
+        <!-- EMAIL -->
+        <div class="info-user">
+          <i class="fas fa-envelope user-data-icon"></i>
+          <p>example@exam.com</p>
+        </div>
       </div>
-    </div>
 
  
       <!-- TÍTULO DE SECCIÓN -->
@@ -181,7 +184,7 @@
          <!-- LUGAR -->
         <p class="user-data">    
         <label for="location">
-            <i class="fas fa-globe-americas user-data-icon"></i>
+            <i class="fas fa-globe-americas user-data-icon world-pocision"></i>
         </label>
         <input class = "user-date-inputs" placeholder="País de Residencia" type="text" name="location" id="location">
         </p>
@@ -209,18 +212,72 @@
           <input class ="user-date-inputs-date date-pocision" type="date" name="date" id="date">
           </p>
       
-        <!-- BOTON PARA REGISTRARSE -->
+        <!-- BOTON PARA DE GUARDAR -->
         <button type="submit" class="btn-save">GUARDAR</button>
       </section>
       <h2 class="title-seccion">Tus ultimas Compras</h2>
-      <hr>
+
+      <!-- LINEA HR -->
+      <hr class="one-line">
+
       <section>
-        <p class="not-buy">No haz realizado ninguna compra aún</p>
-        <p class="not-buy">Empieza ahora</p>
+        <p class="now-buy">No haz realizado ninguna compra aún</p>
+        <a href="#"><p class="now-buy">Empieza ahora</p></a>
       </section>
-     
     </form>
   </main>
+
+  <!-- FOOTER -->
+  <footer>
+    <div class="footer-main">
+    <section class="footer-myAccount">
+      <div class="footer-header">
+        <p>Mi Cuenta</p>
+      </div>
+      <div class="footer-options">
+        <p>Ingresar</p>
+        <p>Ver Carrito</p>
+        <p>Finalizar Compra</p>
+      </div>
+      
+    </section>
+
+    <section class="footer-contactUs">
+      <div class="footer-header">
+        <p>Contacto</p>
+      </div>
+      <div class="footer-options">
+        <p><i class="fas fa-envelope"></i>  <a href="mailto:info@spellbook.com">mailto:info@spellbook.com</a></p>
+        <p><i class="fas fa-phone"></i>  0810 222 9686</p>
+        <p><i class="fab fa-facebook"></i> <i class="fab fa-instagram"></i> <i class="fab fa-twitter"></i></p>
+      </div>
+    </section>
+
+    <section class="footer-onlineStore">
+      <div class="footer-header">
+        <p>Online Store</p>
+      </div>
+      <div class="footer-options">
+        <p>Medios de pago</p>
+        <p>Envíos</p>
+        <p>Términos y Condiciones</p>
+      </div>
+      
+    </section>
+  </div>
+
+    <section class="footer-logo">
+     <p>SpellBook</p>
+
+    </section>
+  
+    
+    <div class="footer-copyright">
+      <hr>
+      <p>SPELLBOOK © 2021 MARCA REGISTRADA - TODOS LOS DERECHOS RESERVADOS - </p>
+    </div>
+    
+  </footer>
 
   <!-- LINK DEL JS DEL HEADER -->
   <script src="js/header.js"></script>
