--- a/views/productDetail.html
+++ b/views/productDetail.html
@@ -64,8 +64,8 @@
 
         <!-- REGISTRO E INICIO DE SESIÓN -->
         <div class="login">
-          <a class="login__btn">Registrate</a>
-          <a class="login__btn login--up">Iniciar sesion</a>
+          <a href="/signup" class="login__btn">Registrate</a>
+          <a href="/login" class="login__btn login--up">Iniciar sesion</a>
         </div>
       </nav>
 
