--- a/views/signUp.html
+++ b/views/signUp.html
@@ -49,7 +49,7 @@
       <nav class="nav">
         <ul class="menu">
           <li class="menu__items">
-              <a href="#" class="menu__link">Inicio</a>
+              <a href="/" class="menu__link">Inicio</a>
           </li>
           <li class="menu__items">
               <a href="#" class="menu__link">Libros</a>
@@ -67,8 +67,8 @@
 
         <!-- REGISTRO E INICIO DE SESIÓN -->
         <div class="login">
-          <a class="login__btn">Registrate</a>
-          <a class="login__btn login--up">Iniciar sesion</a>
+          <a href="/signup" class="login__btn">Registrate</a>
+          <a href="/login" class="login__btn login--up">Iniciar sesion</a>
         </div>
       </nav>
 
@@ -158,7 +158,7 @@
               name="c_pass"
               placeholder="Comfimar contraseña" class="user__info"
             />
-            <span class="warning">La contraseña no coinciden</span>
+            <span class="warning">Las contraseñas no coinciden</span>
           </div>
   
           <button type="submit" value="Enviar" class="btn__send">Registrate</button>
