--- a/views/shoppingCart.html
+++ b/views/shoppingCart.html
@@ -50,7 +50,7 @@
         <nav class="nav">
           <ul class="menu">
             <li class="menu__items">
-                <a href="#" class="menu__link">Inicio</a>
+                <a href="/" class="menu__link">Inicio</a>
             </li>
             <li class="menu__items">
                 <a href="#" class="menu__link">Libros</a>
@@ -68,8 +68,8 @@
 
           <!-- REGISTRO E INICIO DE SESIÓN -->
           <div class="login">
-            <a class="login__btn">Registrate</a>
-            <a class="login__btn login--up">Iniciar sesion</a>
+            <a href="/signup" class="login__btn">Registrate</a>
+            <a href="/login" class="login__btn login--up">Iniciar sesion</a>
           </div>
         </nav>
 
