--- a/public/stylesheets/header.css
+++ b/public/stylesheets/header.css
@@ -157,17 +157,22 @@ a {
   .user__search__desk {
     background-color: var(--color-azulOscuro);
     border: none;
-    border-radius: 15px;
-    color: var(--color-azulClaro);
-    width: 9.2rem;
+   /*  border-radius: 15px; */
+    color: var(--color-beige);
+    width: 0;
+    transition-property: width;
+    transition-duration: 1s;
 
   }
 
   .user__search__desk:focus {
     border: none;
-    background-color: var(--color-beige);
+    background-color: var(--color-azulOscuro);
     font-size: 1rem;
     height: fit-content;
+    outline: none;
+    border-bottom: 1px solid var(--color-beige);
+    width: 9.2rem;
 
   }
 
