--- a/public/stylesheets/header.css
+++ b/public/stylesheets/header.css
@@ -1,23 +1,7 @@
 @import url(variables.css);
 
-* {
-  box-sizing: border-box;
-  margin: 0;
-  padding: 0;
-}
-body {
-  font-family: var(--font-roboto);
-  font-size: 62.5%;
-}
-li {
-  list-style-type: none;
-}
-a {
-  text-decoration: none;
-}
 
 .header {
-    padding: 10px 40px 8px;
     position: relative;
     width: 100%;
     min-width: 320px;
@@ -25,7 +9,7 @@ a {
     display: flex;
     flex-flow: row nowrap;
     align-items: center;
-    justify-content: space-between;
+    justify-content: space-around;
     background-color: var(--color-azulOscuro);
   }
   .logo__link {
@@ -49,15 +33,14 @@ a {
     height: 90vh;
     width: 100%;
     flex-direction: column;
-    clip-path: circle(0px at 100% -10%);
-    -webkit-clip-path: circle(0px at 100% -10%);
+    clip-path: inset(50% 0 50% 0);
+    -webkit-clip-path: inset(50%  0 50% 0);
     transition: all 2s ease-out;
-    max-width: 320px;
     z-index: 9000;
   }
   .nav.open {
-    clip-path: circle(1000px at 90% -10%);
-    -webkit-clip-path: circle(1000px at 90% -10%);
+    clip-path: inset(0 0 0 0);
+    -webkit-clip-path: inset(0 0  0 0);
     pointer-events: all;
   
   }
