--- a/views/index.html
+++ b/views/index.html
@@ -63,6 +63,9 @@
       <li class="menu__items">
         <a href="#" class="menu__link">Nosotros</a>
       </li>
+      <li class="menu__items">
+        <a href="/cart" class="menu__link">Mi carrito</a>
+      </li>
     </ul>
 
     <!-- REGISTRO E INICIO DE SESIÓN -->
@@ -130,7 +133,7 @@
 
 
 
-<main>
+ <main>
       <!-- CARROUSEL -->
     <div class="carrousel">
       <img src="/images/Libros/fuegoSangre.png" alt="" class="carrousel-book">
@@ -266,7 +269,7 @@
         <h1>Más títulos</h1>
         </div>
      </section>
-    </main>
+ </main>
     <!-- FOOTER -->
         <footer>
           <div class="footer-main">
