--- a/views/productDetail.html
+++ b/views/productDetail.html
@@ -60,6 +60,9 @@
           <li class="menu__items">
             <a href="#" class="menu__link">Nosotros</a>
           </li>
+          <li class="menu__items">
+            <a href="/cart" class="menu__link">Mi carrito</a>
+          </li>
         </ul>
 
         <!-- REGISTRO E INICIO DE SESIÓN -->
