se corrige tamaño del div del menu hamburguesa, de 100px a fir-content

--- a/public/stylesheets/header.css
+++ b/public/stylesheets/header.css
@@ -19,7 +19,7 @@
     letter-spacing: 0.2rem;
   }
   .btn {
-    width: 100px;
+    width: fit-content;
     text-align: end;
     font-size: var(--icon);
     color: var(--color-beige);
