se arregla header de la vista register y se quita width de la class .btn del archivo header.css

--- a/public/stylesheets/register.css
+++ b/public/stylesheets/register.css
@@ -1,5 +1,10 @@
 @import url(variables.css);
 
+/* OPERACIONES GENERALES */
+*{
+    margin: 0;
+    box-sizing: border-box;
+}
 
 /* BODY CON IMAGEN DE FONDO */
 .background-image{
