se agrega seccion al home, y se modfica color del mail en el footer

--- a/public/stylesheets/footer.css
+++ b/public/stylesheets/footer.css
@@ -45,6 +45,9 @@ margin-top: 0.8rem;
 .footer-options p{
     margin: 0.2rem 0;
 }
+.footer-options a {
+    color: var(--color-beige)
+}
 
 
 /* LOGO */
