--- a/views/index.html
+++ b/views/index.html
@@ -269,7 +269,57 @@
         <h1>Más títulos</h1>
         </div>
      </section>
+     <!-- MÁS TÍTULOS SE USA LA MISMA PLANTILLA UE LA SELECCIÓN DEL MES -->
+     <section class="month-selection">
+      <!-- LIBRO 1 -->
+      <article class="book">
+        <div class="book-content">
+          <img class="book-cover" src="/images/el-hobbit.jpg" alt="Portada de 'El temor de un hombre sabio'">
+          <h3>El Hobbit</h3>
+          <h5>J. R. R. Tolkien</h5>
+          <!-- Botón de comprar -->
+          <div class="shopping-btn"><input type="button" value="Comprar"></div>
+        </div>
+      </article>
+      <!-- LIBRO 2 -->
+      <article class="book">
+        <div class="book-content">
+          <img class="book-cover" src="/images/ElSeñorDeLosAnillos_LaComunidadDelAnillo.jpg" alt="Portada de 'La Morada - El exilio - El Refugio'">
+          <h3>El señor de los Anillos</h3>
+          <h5>J. R. R. Tolkien</h5>
+          <!-- Botón de comprar -->
+          <div class="shopping-btn"><input type="button" value="Comprar"></div>
+          
+        </div>
+      </article>
+      <!-- LIBRO 3 -->
+      <article class="book">
+        <div class="book-content">
+          <img class="book-cover" src="/images/los-crimenes-de-grindelwald.jpg" alt="Portada de 'Corona de Espadas'">
+          <h3>Los crimenes de Grindelwald</h3>
+          <h5>J. K. Rowling</h5>
+          <!-- Botón de comprar -->
+          <div class="shopping-btn"><input type="button" value="Comprar"></div>
+          
+        </div>
+      </article>
+    </section>
  </main>
+ <hr>
+ <section class="secure-buy-conteiner">
+  <div class="secure-buy-icon secure-buy-item">
+    <i class="fas fa-check-circle"></i>
+    <h5>Compra Segura</h5>
+  </div>
+  <div class="secure-buy-item">
+    <i class="secure-buy-icon fas fa-shipping-fast"></i>
+   <h5>Envio gratis a CABA</h5>
+ </div>
+ <div class="secure-buy-item">
+  <i class="secure-buy-icon fas fa-box-open"></i>
+   <h5>Devoluciones Gratis</h5>
+ </div>
+</section>
     <!-- FOOTER -->
         <footer>
           <div class="footer-main">
