--- a/public/stylesheets/home.css
+++ b/public/stylesheets/home.css
@@ -190,13 +190,13 @@ h5 {
 
 /* MÁS TITULOS */
 .titles .more-titles {
-  padding-right: 1rem;
     display: flex;
-    justify-content: flex-end;
+    justify-content: center;
     align-items: center;
     flex-wrap: nowrap;
     font-size: 1rem;
     height: 75px;
+    margin-bottom: 30px;
 }
 
 .titles .varita {
@@ -267,7 +267,23 @@ h5 {
     animation-delay: 8s;
   }
 
+/* SECCION DE COMPRA SEGURA */
+/* CONTENEDOR DE COMPRA SEGURA */
+.secure-buy-conteiner{
+  display: flex;
+  justify-content: space-evenly;
+  padding-top: 20px;
+  align-items: center;
+}
 
+.secure-buy-item {
+  text-align: center;
+  max-width: 130px;
+}
+
+.secure-buy-icon {
+  font-size: 35px;
+}
 
 
 /* Media queries */
