se agrega check de recordarme en la vista de login

--- a/views/login.html
+++ b/views/login.html
@@ -160,6 +160,14 @@
           />
           <span class="warning">Contraseña incorrecta</span>
         </div>
+        <div>
+          <label class="terminos" for="recuerdame">
+            <input type="checkbox" 
+            name="recuerdame" 
+            id="recuerdame">
+            Recordarme en este equipo
+          </label>
+        </div>
         <button type="submit" value="Enviar" class="btn__send">Iniciar sesion</button>
         <div class="user">
           <a href="" class="enlace_link">¿Olvidate tu contraseña?</a>
