se cambio mail del footer

--- a/views/register.html
+++ b/views/register.html
@@ -250,7 +250,7 @@
         <p>Contacto</p>
       </div>
       <div class="footer-options">
-        <p><i class="fas fa-envelope"></i>  <a href="mailto:info@spellbook.com">mailto:info@spellbook.com</a></p>
+        <p><i class="fas fa-envelope"></i>  <a href="mailto:info@spellbook.com">info@spellbook.com</a></p>
         <p><i class="fas fa-phone"></i>  0810 222 9686</p>
         <p><i class="fab fa-facebook"></i> <i class="fab fa-instagram"></i> <i class="fab fa-twitter"></i></p>
       </div>
