--- a/public/stylesheets/admin.css
+++ b/public/stylesheets/admin.css
@@ -89,9 +89,9 @@ section.product-form{
     color: white;
     text-align: center;
     margin: 1rem;
-    width: fit-content;
-    height: 33rem;
     padding: 1rem;
+    width: 100%;
+    height: 33rem;
     border: 1px solid var(--color-violeta);
     border-radius: 4px;
     display: flex;
