--- a/views/404.ejs
+++ b/views/404.ejs
@@ -9,16 +9,22 @@
 </head>
 <body class="error-bg">
         <a href="/">
-        <div class="error-flex">    
-            <h2 id="quote">La página que buscas desapareció</h2>
-            <h3 id="quote1">Pero puedes ir al</h3>
-            <a id="quote" class="magic" href="/">
+        <section class="error-flex">
+            <div class="star star1"></div>
+    <div class="star star2"></div>
+    <div class="star star3"></div>
+    <div class="star star4"></div>
+    <div class="star star5"></div>
+    <div class="star star6"></div>
+    <div class="star star7"></div>
+    <div class="star star8"></div>
+            <h4>404</h4>    
+            <h2 class="quote">Ups! La página que buscas desapareció</h2>
+            <div class="magic">
             <img class="varita"src="/images/Recursos/varita.png" alt=" imágen de varita mágica">
-            INICIO</a>
-            <h4>404 error</h4>
-        </div>
+            <h3>Inicio</h3></div>
+            </section>
         </a>
 
-<script src="js/404.js"></script>
 </body>
 </html>
