--- a/public/stylesheets/footer.css
+++ b/public/stylesheets/footer.css
@@ -1,17 +1,28 @@
 footer {
-    background-color: var(--color-azulOscuro);
+    background: var(--color-azulOscuro);
     font-family: var(--font-roboto);
+    color: var(--color-beige);
+    position: relative;
+    width: 100%;
+    height: fit-content;
+    overflow: hidden;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 
+}
+footer a{
+    color: var(--color-beige);
 }
 
 .footer-main {
-    color: var(--color-beige);
-font-size: 0.7rem;
-padding: 0.5rem ;
-display: flex;
-flex-direction: column;
-justify-content: center;
-opacity: 0.9;
+    font-size: 0.7rem;
+    padding: 0.5rem ;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    opacity: 0.9;
 
 
 }
@@ -45,15 +56,11 @@ margin-top: 0.8rem;
 .footer-options p{
     margin: 0.2rem 0;
 }
-.footer-options a {
-    color: var(--color-beige)
-}
 
 
 /* LOGO */
 .footer-logo p {
 font-family: var(--font-berkshire);
-color: var(--color-beige);
 text-align: center;
 font-size: 1.5rem;
 margin: 0;
@@ -76,37 +83,18 @@ hr{
     font-size: 0.5rem;
     padding-bottom: 0.3rem;
     margin-bottom: 0;
-    color: var(--color-beige);
 }
 
 /* tablet */
 @media (min-width: 518px) {
+    footer{
+        display: block;
+    }
     .footer-main {
-        color: var(--color-beige);
         font-size: 0.8rem;
         padding: 0.5rem;
         display: flex;
         flex-direction: row;
         justify-content: space-between;
-        opacity: 0.9;
-        
         }
-
-
-}
-
-/* Desktop */
-
-@media (min-width: 769px) {
-    .footer-main {
-    color: var(--color-beige);
-    font-size: 0.8rem;
-    padding: 0.5rem;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    opacity: 0.9;
-    
-    }
-
 }
