--- a/views/index.html
+++ b/views/index.html
@@ -33,8 +33,15 @@
 <body>
   <!-- HEADER -->
  <!-- COMIENZA EL HEADER -->
- <header class="header">
-
+ <header class="header error-bg">
+  <div class="star star1"></div>
+  <div class="star star2"></div>
+  <div class="star star3"></div>
+  <div class="star star4"></div>
+  <div class="star star5"></div>
+  <div class="star star6"></div>
+  <div class="star star7"></div>
+   <div class="star star8"></div>
   <!-- LOGO CON LINK AL HOME -->
   <div class="logo">
     <h1 class="logo__title"><a href="/" class="logo__link">SpellBook</a></h1>
@@ -321,43 +328,51 @@
  </div>
 </section>
     <!-- FOOTER -->
-        <footer>
+        <footer class="">
+          <div class="star star1"></div>
+          <div class="star star2"></div>
+          <div class="star star3"></div>
+          <div class="star star4"></div>
+          <div class="star star5"></div>
+          <div class="star star6"></div>
+          <div class="star star7"></div>
+          <div class="star star8"></div>
           <div class="footer-main">
-          <section class="footer-myAccount">
-            <div class="footer-header">
-              <p>Mi Cuenta</p>
-            </div>
-            <div class="footer-options">
-              <p>Ingresar</p>
-              <p>Ver Carrito</p>
-              <p>Finalizar Compra</p>
-            </div>
+            <section class="footer-myAccount">
+             <div class="footer-header">
+                <p>Mi Cuenta</p>
+             </div>
+              <div class="footer-options">
+                <p>Ingresar</p>
+                <p>Ver Carrito</p>
+                <p>Finalizar Compra</p>
+              </div>
             
-          </section>
+            </section>
 
-          <section class="footer-contactUs">
-            <div class="footer-header">
-              <p>Contacto</p>
-            </div>
-            <div class="footer-options">
-              <p><i class="fas fa-envelope"></i>  <a href="mailto:info@spellbook.com">info@spellbook.com</a></p>
-              <p><i class="fas fa-phone"></i>  0810 222 9686</p>
-              <p><i class="fab fa-facebook"></i> <i class="fab fa-instagram"></i> <i class="fab fa-twitter"></i></p>
-            </div>
-          </section>
+            <section class="footer-contactUs">
+              <div class="footer-header">
+                <p>Contacto</p>
+              </div>
+              <div class="footer-options">
+                <p><i class="fas fa-envelope"></i>  <a href="mailto:info@spellbook.com">info@spellbook.com</a></p>
+                <p><i class="fas fa-phone"></i>  0810 222 9686</p>
+                <p><i class="fab fa-facebook"></i> <i class="fab fa-instagram"></i> <i class="fab fa-twitter"></i></p>
+              </div>
+            </section>
 
-          <section class="footer-onlineStore">
-            <div class="footer-header">
-              <p>Online Store</p>
-            </div>
-            <div class="footer-options">
-              <p>Medios de pago</p>
-              <p>Envíos</p>
-              <p>Términos y Condiciones</p>
-            </div>
+            <section class="footer-onlineStore">
+              <div class="footer-header">
+                <p>Online Store</p>
+              </div>
+              <div class="footer-options">
+                <p>Medios de pago</p>
+                <p>Envíos</p>
+                <p>Términos y Condiciones</p>
+              </div>
             
-          </section>
-        </div>
+            </section>
+          </div>
 
           <section class="footer-logo">
            <p>SpellBook</p>
@@ -368,8 +383,7 @@
           <div class="footer-copyright">
             <hr>
             <p>SPELLBOOK © 2021 MARCA REGISTRADA - TODOS LOS DERECHOS RESERVADOS - </p>
-          </div>
-          
+          </div> 
         </footer>
 
 <!-- LINK DEL JS DEL HEADER -->
