--- a/views/productDetail.ejs
+++ b/views/productDetail.ejs
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/stylesheets/login.css" />
+    <link rel="stylesheet" href="stylesheets/productDetail.css" />
     <title>SpellBook</title>
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
@@ -12,28 +12,28 @@
       rel="stylesheet"
     />
 
-     <!-- LINK CSS DEL HEADER -->
-     <link rel="stylesheet" href="stylesheets/header.css">
-
-     <!-- LINK DEL FOOTER -->
-     <link rel="stylesheet" href="stylesheets/footer.css">
-
+    <!-- LINK CSS DEL HEADER -->
+    <link rel="stylesheet" href="stylesheets/header.css">
+    
+    <!-- NORMALIZE Y ESTILOS -->
+    <link rel="stylesheet" href="/stylesheets/styles.css">
+    
+    <!-- LINK DEL FOOTER -->
+    <link rel="stylesheet" href="stylesheets/footer.css">
 
     <!-- Berkshire Swash -->
     <link
       href="https://fonts.googleapis.com/css2?family=Berkshire+Swash&display=swap"
       rel="stylesheet"
     />
-    <!-- fon icons -->
     <script
       src="https://kit.fontawesome.com/fc00004fb4.js"
       crossorigin="anonymous"
     ></script>
   </head>
   <body>
-
-    <!-- COMIENZA EL HEADER -->
-    <header class="header">
+     <!-- COMIENZA EL HEADER -->
+     <header class="header">
 
       <!-- LOGO CON LINK AL HOME -->
       <div class="logo">
@@ -49,7 +49,7 @@
       <nav class="nav">
         <ul class="menu">
           <li class="menu__items">
-              <a href="/" class="menu__link">Inicio</a>
+              <a href="#" class="menu__link">Inicio</a>
           </li>
           <li class="menu__items">
               <a href="#" class="menu__link">Libros</a>
@@ -128,114 +128,78 @@
       </nav>
     </header>
 
-    <aside class="aside">
-      <figure class="logo-sticker">
-        <img
-          src="images/Diseño y Logo/Logo para fondos oscuros.png"
-          alt=""
-          class="logo-sticker__img"
-        />
-      </figure>
-      <form action="" method="POST" class="form">
-        <div class="box">
-          <h2 class="box__title">Iniciar sesion</h2>
-        </div>
+    <main class="main">
+      <section class="product">
+        <article class="item">
+          <h2 class="item__title">Animales Fantasticos</h2>
+          <figure class="item__img">
+            <img
+              src="images/books/AnimalesFantasticosYDondeEncontrarlos.jpg"
+              alt=""
+            />
+          </figure>
+          <div class="descriptions">
+            <p class="descriptions__text">
+              Precio: <span class="description--gray">$1200</span>
+            </p>
+            <p class="descriptions__text">
+              Autor: <span class="description--gray">J.K Rowling</span>
+            </p>
+            <p class="descriptions__text">
+              Editorial:<span class="description--gray">Salamandra</span>
+            </p>
+            <p class="descriptions__text">
+              Año de edicion:<span class="description--gray">2017</span>
+            </p>
+            <p class="descriptions__text">
+              Idioma:<span class="description--gray">Castellaño</span>
+            </p>
+            <p class="descriptions__text">
+              Cantidad de páginas:<span class="description--gray">256</span>
+            </p>
+          </div>
+          <div class="card__box">
+          <button class="cart">
+            <i class="fas fa-cart-plus icon-cart"></i> Agregar al Carrito
+          </button>
+          </div>
+          <div class="descriptions descriptions--top">
+            <h3 class="descriptions__title">Sinopsis</h3>
+            <p class="descriptions__paragraph">
+              El explorador y magizoólogo Newt Scamander llega a Nueva York con
+              la intención de permanecer unos pocos días. Pero cuando pierde su
+              maleta y algunos de sus animales fantásticos se escapan de ella,
+              una serie de acontecimientos extraordinarios se desatan, poniendo
+              en vilo a la gran ciudad..
+            </p>
+          </div>
+        </article>
+        <article class="item item--secondary">
+          <div class="box__books"></div>
+          <h2 class="item__title item--secondary__title">Productos Relacionados</h2>
+          <figure class="books">
+            <img class="books__img" src="images/books/ElSeñorDeLosAnillos_LaComunidadDelAnillo.jpg" alt="">
+              <a href="" class="books__title">El señor de los anillos - La comunidad del anillo</a>
+          </figure>
+          <figure class="books">
+            <img class="books__img" src="images/books/AnimalesFantasticosYDondeEncontrarlos.jpg" alt="">
+              <a class="books__title" href="">Animales fantasticos - y donde encontrarlos</a>
+          </figure>
+          <figure class="books">
+            <img class="books__img" src="images/books/harry-potter-y la camara secreta (1).png" alt="">
+              <a class="books__title" href="">Harry Potter - y la camara secreta</a>
+          </figure>
+          <figure class="books">
+            <img class="books__img" src="images/books/1567730915_20.jpg" alt="">
+              <a class="books__title" href="">Harry Potter - y el caliz de fuego</a>
+          </figure>
+        </article>
+      </section>
+    </main>
 
-        <div class="user">
-          <input
-            type="text"
-            name="name"
-            placeholder="Nombre de Usuario"
-            class="user__info"
-          />
-          <span class="warning">Nombre de usuario incorrecto</span>
-        </div>
-
-        <div class="user">
-          <input
-            type="password"
-            name="password"
-            placeholder="Contraseña"
-            class="user__info"
-          />
-          <span class="warning">Contraseña incorrecta</span>
-        </div>
-        <div>
-          <label class="terminos" for="recuerdame">
-            <input type="checkbox" 
-            name="recuerdame" 
-            id="recuerdame">
-            Recordarme en este equipo
-          </label>
-        </div>
-        <button type="submit" value="Enviar" class="btn__send">Iniciar sesion</button>
-        <div class="user">
-          <a href="" class="enlace_link">¿Olvidate tu contraseña?</a>
-          <a href="/signup" class="enlace_link"  >¿No tenes cuenta?</a>
-        </div>
-        <div class="user social">
-          <a href="" class="social__btn"
-            ><i class="fab fa-google social__icon"></i>GOOGLE</a
-          >
-          <a href="" class="social__btn"
-            ><i class="fab fa-facebook-f social__icon"></i>FACEBOOK</a
-          >
-        </div>
-      </form>
-    </aside>
-
-       <!-- FOOTER -->
-  <footer>
-    <div class="footer-main">
-    <section class="footer-myAccount">
-      <div class="footer-header">
-        <p>Mi Cuenta</p>
-      </div>
-      <div class="footer-options">
-        <p>Ingresar</p>
-        <p>Ver Carrito</p>
-        <p>Finalizar Compra</p>
-      </div>
-      
-    </section>
-
-    <section class="footer-contactUs">
-      <div class="footer-header">
-        <p>Contacto</p>
-      </div>
-      <div class="footer-options">
-        <p><i class="fas fa-envelope"></i>  <a href="mailto:info@spellbook.com">info@spellbook.com</a></p>
-        <p><i class="fas fa-phone"></i>  0810 222 9686</p>
-        <p><i class="fab fa-facebook"></i> <i class="fab fa-instagram"></i> <i class="fab fa-twitter"></i></p>
-      </div>
-    </section>
-
-    <section class="footer-onlineStore">
-      <div class="footer-header">
-        <p>Online Store</p>
-      </div>
-      <div class="footer-options">
-        <p>Medios de pago</p>
-        <p>Envíos</p>
-        <p>Términos y Condiciones</p>
-      </div>
-      
-    </section>
-  </div>
-
-    <section class="footer-logo">
-     <p>SpellBook</p>
-
-    </section>
+  <!-- FOOTER -->
+  <%- include('./partials/footer') %>
   
-    
-    <div class="footer-copyright">
-      <hr>
-      <p>SPELLBOOK © 2021 MARCA REGISTRADA - TODOS LOS DERECHOS RESERVADOS - </p>
-    </div>
-    
-  </footer>
-
     <script src="js/header.js"></script>
   </body>
 </html>
