--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -1,41 +1,41 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SpellBook</title>
-    
     <!-- GOOGLE FONT -->
     <!-- Roboto -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
-
     <!-- Berkshire Swash -->
     <link href="https://fonts.googleapis.com/css2?family=Berkshire+Swash&display=swap" rel="stylesheet">
-
     <!-- FONT AWESOME -->
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
     <script src="https://kit.fontawesome.com/fc00004fb4.js"crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/29f0a39c3c.js" crossorigin="anonymous"></script>
 
     <!-- NORMALIZE Y ESTILOS -->
-    
     <link rel="stylesheet" href="/stylesheets/styles.css">
-
     <!-- LINK CSS DEL HEADER -->
     <link rel="stylesheet" href="stylesheets/header.css">
-
-     <!-- LINK DEL HOME -->
-     <link rel="stylesheet" href="stylesheets/home.css">
 </head>
 <body>
-      <!-- HEADER -->
- <header class="header">
-    <!-- LOGO CON LINK AL HOME -->
-    <div class="logo">
+  <!-- HEADER -->
+ <header class="header error-bg">
+  <div class="star star1"></div>
+  <div class="star star2"></div>
+  <div class="star star3"></div>
+  <div class="star star4"></div>
+  <div class="star star5"></div>
+  <div class="star star6"></div>
+  <div class="star star7"></div>
+  <div class="star star8"></div>
+  <!-- LOGO CON LINK AL HOME -->
+  <div class="logo">
       <h1 class="logo__title"><a href="/" class="logo__link">SpellBook</a></h1>
-    </div>
+  </div>
     <!-- BURGER MENU -->
     <a href="/signUp"><div class="btn">
       <i class="far fa-user" id="icon"></i>
