--- a/views/register.ejs
+++ b/views/register.ejs
@@ -36,13 +36,13 @@
     <form action="/signup" method="POST">
 
       <!-- IMAGEN DE USUARIO, BARITA -->
-      <section class="user">        
-          <div class="user-image">
-              <img  class= "user-image-item"src="images/user-img.png"  alt="">
-          </div>
-          <div class="user-magic-wand">
-              <img src="/images/varita.png" width="15%" alt="">
-          </div>
+      <section class="register-user">    
+        <div class="user-image">
+          <img  class= "user-image-item"src="images/user-img.png"  alt="">
+        </div>  
+        <div class="user-magic-wand">
+          <img src="/images/varita.png" width="15%" alt="">
+        </div>    
       </section>
 
      <!-- NOMBRE DEL USUARIO -->
