--- a/views/shoppingCart.ejs
+++ b/views/shoppingCart.ejs
@@ -64,19 +64,19 @@
     <section class="detail-buy">
         <!-- TÍTULO DE SECCIÓN -->
         <h3 class="detail-title">Detalle de la Compra</h3>
-
+        <hr class="one-line">
         <!-- SECCIÓN DETALLE DE COMPRA -->
         <div class="conteiner-price">
             <p>Harry Potter y el caliz de fuego</p>
-            <p>1200</p>
+            <p>$ 1200</p>
         </div>
         <div class="conteiner-price">
             <p>SubTotal </p>
-            <p>1200</p>
+            <p>$ 1200</p>
         </div>
         <div class="conteiner-price total">
             <p>Total</p>
-            <p>1200</p>
+            <p>$ 1200</p>
         </div>
         <a href="#" >
             <button class="to-pay" type="submit">Ir al Pago</button>
